A small test refactoring to avoid string concat in a cycle